--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "A REST API project, part of Free Code Camp's curriculum",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "export $(cat .env | xargs) && nodemon server.js"
 	},
 	"dependencies": {
 		"express": "^4.14.0",
