--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"express": "^4.14.0",
 		"mongodb": "^2.2.14",
 		"mongoose": "^4.7.2",
+		"node-cmd": "^3.0.0",
 		"shortid": "^2.2.6"
 	},
 	"engines": {
