--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"cors": "^2.8.1",
 		"express": "^4.14.0",
+		"mongodb": "^3.6.0",
 		"mongoose": "^4.13.21",
 		"node-cmd": "^3.0.0",
 		"shortid": "^2.2.6"
