Add more debugging for Express

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "export $(cat .env | xargs) && nodemon server.js"
+    "dev": "export $(cat .env | xargs) && DEBUG=fcc-exercise-tracker:* nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.1",
